--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     <title>Formulário</title>
   </head>
   <body>    
-    <div id="app">      
+    <div id="app">
+      <nav-bar></nav-bar>
+      <div class="container mt-3 mb-3">
+        <router-view></router-view>      
+      </div>
     </div>
   </body>
 </html>
